--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,11 +1,9 @@
 // Run on an agent where we want to use Go
 node {
     // Ensure the desired Go version is installed
-    def root = tool type: 'go', name: 'Go 1.15'
+    def root = "/usr/local/go/bin/go"
 
-    // Export environment variables pointing to the directory where Go was installed
-    withEnv(["GOROOT=${root}", "PATH+GO=${root}/bin"]) {
-        
+ 
         stage 'Checkout'
         git url: 'https://github.com/farhanramzy/simple-golang-jenkins.git'
 
@@ -20,5 +18,5 @@ node {
 
         stage 'Deploy'
 
-    }
+    
 }
