--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,19 +4,19 @@ node {
     def root = "/usr/local/go/bin/go"
 
  
-        stage 'Checkout'
-        git branch: "main", url: 'https://github.com/farhanramzy/simple-golang-jenkins.git'
+        stage "Checkout"
+        git branch: "main", url: "https://github.com/farhanramzy/simple-golang-jenkins.git"
 
-        stage 'preTest'
-        sh 'go version'
+        stage "preTest"
+        sh "${root} version"
 
-        stage 'Test'
-        sh '${root} test ./... -cover'
+        stage "Test"
+        sh "${root} test ./... -cover"
 
-        stage 'Build'
-        sh '${root} build ./...*'
+        stage "Build"
+        sh "${root} build ./...*"
 
-        stage 'Deploy'
+        stage "Deploy"
 
     
 }
