--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,3 +1,34 @@
+pipeline{
+    agent: any
+    environment {
+        root = "/usr/local/go/bin/go"
+        branch = "main"
+        scmUrl = "https://github.com/farhanramzy/simple-golang-jenkins.git"
+    }
+    stages {
+        stage("Go Version") {
+            steps {
+                sh "${root} version"
+            }
+        }
+        stage("Git Clone") {
+            steps {
+                git branch: "${branch}", url: "${scmUrl}"
+            }
+        }
+        stage("Go Test") {
+            steps {
+                sh "${root} test"
+            }
+        }
+        stage("Go Build") {
+            steps {
+                sh "${root} build"
+            }
+        }
+    }
+}
+
 // Run on an agent where we want to use Go
 node {
     // Ensure the desired Go version is installed
